tree-sitter-vizql/test/corpus/basic.txt
================================================================================
Simple point plot
================================================================================

SELECT x, y FROM data VISUALISE AS PLOT WITH point USING x = x, y = y

--------------------------------------------------------------------------------

(query
  (sql_body)
  (viz_clause
    (with_clause
      (geom_type)
      (aesthetic_mapping
        (aesthetic_name)
        (aesthetic_value
          (column_reference
            (identifier))))
      (aesthetic_mapping
        (aesthetic_name)
        (aesthetic_value
          (column_reference
            (identifier)))))))

================================================================================
Multi-layer plot
================================================================================

SELECT date, value FROM timeseries VISUALISE AS PLOT
WITH line USING x = date, y = value
WITH point USING x = date, y = value, color = 'red'

--------------------------------------------------------------------------------

(query
  (sql_body)
  (viz_clause
    (with_clause
      (geom_type)
      (aesthetic_mapping
        (aesthetic_name)
        (aesthetic_value
          (column_reference
            (identifier))))
      (aesthetic_mapping
        (aesthetic_name)
        (aesthetic_value
          (column_reference
            (identifier))))))
  (viz_clause
    (with_clause
      (geom_type)
      (aesthetic_mapping
        (aesthetic_name)
        (aesthetic_value
          (column_reference
            (identifier))))
      (aesthetic_mapping
        (aesthetic_name)
        (aesthetic_value
          (column_reference
            (identifier))))
      (aesthetic_mapping
        (aesthetic_name)
        (aesthetic_value
          (literal_value
            (string)))))))

================================================================================
Plot with scales and theme
================================================================================

SELECT x, y, group FROM data VISUALISE AS PLOT
WITH point USING x = x, y = y, color = group
SCALE x USING type = 'linear', limits = [0, 100]
SCALE color USING palette = 'viridis'
THEME minimal

--------------------------------------------------------------------------------

(query
  (sql_body)
  (viz_clause
    (with_clause
      (geom_type)
      (aesthetic_mapping
        (aesthetic_name)
        (aesthetic_value
          (column_reference
            (identifier))))
      (aesthetic_mapping
        (aesthetic_name)
        (aesthetic_value
          (column_reference
            (identifier))))
      (aesthetic_mapping
        (aesthetic_name)
        (aesthetic_value
          (column_reference
            (identifier))))))
  (viz_clause
    (scale_clause
      (aesthetic_name)
      (scale_property
        (scale_property_name)
        (scale_property_value
          (string)))
      (scale_property
        (scale_property_name)
        (scale_property_value
          (array
            (array_element
              (number))
            (array_element
              (number)))))))
  (viz_clause
    (scale_clause
      (aesthetic_name)
      (scale_property
        (scale_property_name)
        (scale_property_value
          (string)))))
  (viz_clause
    (theme_clause
      (theme_name))))

================================================================================
Plot with labels
================================================================================

SELECT x, y FROM data VISUALISE AS PLOT
WITH point USING x = x, y = y
LABEL title = 'My Plot', x = 'X Axis', y = 'Y Axis'
LABEL caption = 'Data source: Analysis DB'

--------------------------------------------------------------------------------

(query
  (sql_body)
  (viz_clause
    (with_clause
      (geom_type)
      (aesthetic_mapping
        (aesthetic_name)
        (aesthetic_value
          (column_reference
            (identifier))))
      (aesthetic_mapping
        (aesthetic_name)
        (aesthetic_value
          (column_reference
            (identifier))))))
  (viz_clause
    (label_clause
      (label_assignment
        (label_type)
        (string))
      (label_assignment
        (label_type)
        (string))
      (label_assignment
        (label_type)
        (string))))
  (viz_clause
    (label_clause
      (label_assignment
        (label_type)
        (string)))))